# app/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-01-10T16:36:31+00:00
+#   timestamp: 2026-01-13T14:56:50+00:00
 
 from __future__ import annotations
 
@@ -23,6 +23,14 @@ class MetadataAnalysis(BaseModel):
     is_suspicious: bool | None = None
 
 
+class ArtMediumAnalysis(BaseModel):
+    medium: str | None = None
+    confidence: float | None = None
+    consistency_score: float | None = None
+    description: str | None = None
+    labels_weighted: dict[str, float] | None = None
+
+
 class ImageStats(BaseModel):
     width: int | None = None
     height: int | None = None
@@ -35,6 +43,9 @@ class ImageStats(BaseModel):
     )
     metadata_analysis: MetadataAnalysis | None = Field(
         None, description='Results of the image metadata examination.'
+    )
+    art_medium_analysis: ArtMediumAnalysis | None = Field(
+        None, description='Results of the DINOv2 and CLIP basis art medium analysis.'
     )
 
 
